--- a/app/src/main/res/layout/content_tutor_settings.xml
+++ b/app/src/main/res/layout/content_tutor_settings.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="in.co.snapqa.clientapp0903.TutorSettings"
-    tools:showIn="@layout/activity_tutor_settings">
+    tools:context="in.co.snapqa.clientapp0903.TutorProfile"
+    tools:showIn="@layout/activity_tutor_profile">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -202,7 +202,7 @@
                         android:layout_height="match_parent"
                         android:textSize="16dp"
                         android:layout_marginLeft="24dp"
-                        android:hint="7678656465465"
+                        android:hint="PAN Number"
                         android:gravity="center_vertical"
                         android:id="@+id/tutor_profile_pan_number"/>
 
@@ -233,6 +233,7 @@
                         android:textSize="16dp"
                         android:layout_marginLeft="24dp"
                         android:gravity="center_vertical"
+                        android:hint="Account Number"
                         android:id="@+id/tutor_profile_account_number"/>
 
                 </LinearLayout>
@@ -264,7 +265,7 @@
                         android:textSize="16dp"
                         android:layout_marginLeft="24dp"
                         android:gravity="center_vertical"
-                        android:hint="khfkudshdkjshfkjahf"
+                        android:hint="IFSC Code"
                         android:id="@+id/tutor_profile_ifsc_code"/>
 
                 </LinearLayout>
