--- a/app/src/main/res/layout/fragment_accepted_live_session.xml
+++ b/app/src/main/res/layout/fragment_accepted_live_session.xml
@@ -17,12 +17,19 @@
             android:layout_marginTop="40dp"
             android:id="@+id/accepted_live_session_fragment_rv_tv"/>
 
-        <android.support.v7.widget.RecyclerView
+        <android.support.v4.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/accepted_live_session_recycler_view">
+            android:layout_height="match_parent"
+            android:id="@+id/accepted_live_session_fragment_rv_swipe_refresh">
 
-        </android.support.v7.widget.RecyclerView>
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/accepted_live_session_recycler_view">
+
+            </android.support.v7.widget.RecyclerView>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
 
     </LinearLayout>
