--- a/app/src/main/res/layout/fragment_new_deals.xml
+++ b/app/src/main/res/layout/fragment_new_deals.xml
@@ -18,12 +18,19 @@
             android:layout_marginTop="40dp"
             android:id="@+id/new_deals_fragment_rv_tv"/>
 
-        <android.support.v7.widget.RecyclerView
+        <android.support.v4.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/new_deals_rv">
+            android:id="@+id/new_deals_fragment_rv_swipe_refresh">
 
-        </android.support.v7.widget.RecyclerView>
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/new_deals_rv">
+
+            </android.support.v7.widget.RecyclerView>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 
 </FrameLayout>
