--- a/app/src/main/res/layout/activity_tutor_profile.xml
+++ b/app/src/main/res/layout/activity_tutor_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -141,12 +142,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textSize="16dp"
-                        android:layout_marginLeft="60dp"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginRight="15dp"
                         android:gravity="center_vertical"
                         android:background="#00bfff"
                         android:text="Request Redeem"
                         android:textAlignment="center"
-                        android:id="@+id/tutor_profile_phone_number4"/>
+                        android:id="@+id/reqredeem"/>
 
 
                 </LinearLayout>
@@ -176,7 +178,8 @@
                     android:layout_height="56dp"
                     android:orientation="horizontal"
                     android:padding="16dp"
-                    android:layout_gravity="center_vertical">
+                    android:layout_gravity="center_vertical"
+                    android:id="@+id/hist">
 
                     <ImageView
                         android:layout_width="24dp"
